// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TodoItem.tsx > should match snapshot > should match completed todo snapshot 1`] = `
<DocumentFragment>
  <div
    class="border-2 border-gray-400 py-2 px-4 font-bold rounded-md shadow-md mb-4 flex items-center justify-between w-full"
    data-testid="todo"
  >
    <p
      class="w-4/5 text-gray-500"
      data-testid="striked-todo"
    >
       
      <s
        class="decoration-2"
      >
        <i>
          buy milk
        </i>
      </s>
    </p>
    <button
      class="rounded-full bg-red-500   w-6 h-6 flex items-start justify-center hover:scale-105 "
      data-testid="todo-delete-btn"
    >
      <span
        class=" text-white font-extrabold "
      >
        ×
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`TodoItem.tsx > should match snapshot > should match pending todo snapshot 1`] = `
<DocumentFragment>
  <div
    class="border-2 border-gray-400 py-2 px-4 font-bold rounded-md shadow-md mb-4 flex items-center justify-between w-full"
    data-testid="todo"
  >
    <p
      class="w-4/5"
    >
      brush teeth
    </p>
    <button
      class="rounded-full bg-red-500   w-6 h-6 flex items-start justify-center hover:scale-105 "
      data-testid="todo-delete-btn"
    >
      <span
        class=" text-white font-extrabold "
      >
        ×
      </span>
    </button>
    <button
      class="rounded-full bg-green-500 ml-3  w-6 h-6 flex items-start justify-center hover:scale-105 "
      data-testid="todo-markascomplete-btn"
    >
      <span
        class=" text-white font-extrabold "
      >
        ✓
      </span>
    </button>
  </div>
</DocumentFragment>
`;
